Add payment method options for store and fix cash-out